# merkle-heapless

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
mmr-macro/: Cargo.toml
mmr-macro/src/: lib.rs
src/: __main.rs  __peak.rs  augmentable.rs  compactable.rs  foo.rs  fractal.rs  lib.rs  lib_old.rs  main.rs  mergeable.rs  multi_branch.rs  peak.rs  prefixed.rs  proof.rs  tests.rs  traits.rs  utils.rs
tests/: Cargo.toml
tests/src/: __main.rs  basic.rs  main.rs  mmr.rs
wasm-test/: Cargo.toml  index.html
wasm-test/src/: lib.rs
