[package]
name = "merkle-heapless"
edition = "2021"
version = "0.0.1"
authors = ["Yury <yury.yukhananov@tutanota.com>"]
description = "Statically-allocated Merkle Tree and Mountain Range"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Retamogordo/merkle-heapless"
keywords = ["merkle tree", "merkle mountain range", "no-std", "statically-allocated"]
categories = ["data structures", "no-std", "crypto"]

[workspace]
members = ["mmr-macro", "tests"]
default-members = [".", "mmr-macro"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
mmr-macro = {version = "0.0.1", path = "./mmr-macro"}

[features]
mmr_macro = []