[package]
name = "merkle-heapless"
edition = "2021"
version = "0.0.2"
authors = ["Yury <yury.yukhananov@tutanota.com>"]
description = "Statically-allocated Merkle Tree and Mountain Range"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Retamogordo/merkle-heapless"
keywords = ["merkle-tree", "mountain-range", "no-std", "statically-allocated"]
categories = ["data structures", "no-std", "crypto"]

[workspace]
members = ["mmr-macro", "tests"]
default-members = [".", "mmr-macro"]

[lib]

[dependencies]
mmr-macro = {version = "0.0.2", path = "./mmr-macro"}

[features]
mmr_macro = []