[package]
name = "mmr-macro"
edition = "2021"
version = "0.0.1"
description = "Macro for Merkle Mountain Range implementation with merkle-heapless"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Retamogordo/merkle-heapless"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.103", features = ["full"] }
quote = "1.0.7"
proc-macro2 = "1.0.21"
convert_case = "0.6.0"
